--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,30 +1,69 @@
-pipeline {
-    agent {
-        docker {
-            image 'node:lts-buster-slim'
-            args '-p 3000:3000'
-        }
-    }
+podTemplate(containers: [
+
+        containerTemplate(
+        name: 'jnlp', 
+        image: 'jenkins/inbound-agent:latest'
+        ),
+    containerTemplate(
+        name: 'node', 
+        image: 'node:latest', 
+        command: 'sleep', 
+        args: '30d')
+  ],
+  volumes: [
+  persistentVolumeClaim(
+      mountPath: '/home/jenkins/agent', 
+      claimName: 'maven-workspace'      )
+  ]
+  
+  ) {
+node(POD_LABEL) {
     environment {
-        CI = 'true'
-    }
-    stages {
-        stage('Build') {
-            steps {
-                sh 'npm install'
-            }
-        }
-        stage('Test') {
-            steps {
-                sh './jenkins/scripts/test.sh'
-            }
-        }
-        stage('Deliver') {
-            steps {
-                sh './jenkins/scripts/deliver.sh'
-                input message: 'Finished using the web site? (Click "Proceed" to continue)'
-                sh './jenkins/scripts/kill.sh'
-            }
-        }
-    }
+            CI = 'true'
+                }
+    stage ('get project){
+
+            git url: 'https://github.com/younes-bami/node.git', branch: 'master'
+
+
+            container('node'){
+
+                  stage('build'){
+
+			sh '''
+			 npm install
+			   '''		
+
+                               }
+                             }
+
+           container('node'){
+
+                  stage('Test'){
+
+                        sh '''
+                         ./jenkins/scripts/test.sh
+                           '''
+
+                               }
+                             }
+
+
+           container('node'){
+
+                  stage('deliver'){
+
+                        sh '''
+                         ./jenkins/scripts/deliver.sh
+                         input message: 'Finished using the web site? (Click "Proceed" to continue)'
+                         ./jenkins/scripts/kill.sh
+                           '''
+
+                               }
+                             }
+
+}
+
+}
+
 }
