--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -21,44 +21,29 @@ node(POD_LABEL) {
     environment {
             CI = 'true'
                 }
-    stage ('get project){
-
+    stage ('get project'){
             git url: 'https://github.com/younes-bami/node.git', branch: 'master'
-
-
             container('node'){
-
                   stage('build'){
-
-			sh '''
-			 npm install
-			   '''		
-
-                               }
+			            sh '''
+			            npm install
+			            '''		             }
                              }
-
            container('node'){
-
                   stage('Test'){
-
                         sh '''
                          ./jenkins/scripts/test.sh
                            '''
-
                                }
                              }
-
-
            container('node'){
 
                   stage('deliver'){
-
                         sh '''
                          ./jenkins/scripts/deliver.sh
                          input message: 'Finished using the web site? (Click "Proceed" to continue)'
                          ./jenkins/scripts/kill.sh
                            '''
-
                                }
                              }
 
