add node cache volume

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -13,7 +13,10 @@ podTemplate(containers: [
   volumes: [
   persistentVolumeClaim(
       mountPath: '/home/jenkins/agent', 
-      claimName: 'maven-workspace'      )
+      claimName: 'maven-workspace'      ),
+  persistentVolumeClaim(
+      mountPath: '/home/jenkins/.npm', 
+      claimName: 'maven-workspace'      ),
   ]
   
   ) {
