--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -15,7 +15,7 @@ podTemplate(containers: [
       mountPath: '/home/jenkins/agent', 
       claimName: 'maven-workspace'      ),
   persistentVolumeClaim(
-      mountPath: '/home/jenkins/.npm', 
+      mountPath: '/root/.npm', 
       claimName: 'node-npm'      )
   ]
   
