add docker build

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,5 +1,10 @@
 podTemplate(containers: [
 
+
+        containerTemplate(
+        name: 'docker', 
+        image: 'docker:latest'
+        ),
         containerTemplate(
         name: 'jnlp', 
         image: 'jenkins/inbound-agent:latest'
@@ -43,7 +48,20 @@ node(POD_LABEL) {
                              }
     }
 
-    stage ('Deliver '){
+
+
+      stage('Docker build'){
+        container('docker') {
+
+          sh '''
+          docker build -t web-app .
+          '''
+
+        }
+
+      }
+
+         stage ('Deliver '){
            container('node'){
                         sh '''
                          ./jenkins/scripts/deliver.sh
@@ -55,7 +73,6 @@ node(POD_LABEL) {
                          ./jenkins/scripts/kill.sh
                            '''
                              }
-
 }
 
 }
