--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -3,7 +3,7 @@ podTemplate(containers: [
 
         containerTemplate(
         name: 'docker', 
-        image: 'docker:latest'
+        image: 'docker:dind'
         ),
         containerTemplate(
         name: 'jnlp', 
