--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -3,8 +3,10 @@ podTemplate(containers: [
 
         containerTemplate(
         name: 'docker', 
-        image: 'docker:latest',
+        image: 'docker:18.05-dind',
         privileged: true
+
+          
         ),
         containerTemplate(
         name: 'jnlp', 
