--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -54,6 +54,7 @@ node(POD_LABEL) {
     stage('Docker build ') {                        
            container('docker'){
                         sh '''
+                         cd /var/lib/jenkins/workspace/cicd/pipeline
                          docker build -t web-app .
                            '''
                              }
