--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -54,7 +54,7 @@ node(POD_LABEL) {
     stage('Docker build ') {                        
            container('docker'){
                         sh '''
-                         cd /var/lib/jenkins/workspace/cicd/pipeline
+                         cd /var/lib/jenkins/workspace/${env.JOB_BASE_NAME}/pipeline
                          docker build -t web-app .
                            '''
                              }
