--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -53,11 +53,10 @@ node(POD_LABEL) {
 
     stage('Docker build ') {                        
            container('docker'){
-                        sh '''
-                         echo ${env.JOB_BASE_NAME} &&
-                         cd /var/lib/jenkins/workspace/${env.JOB_BASE_NAME}/pipeline &&
-                         docker build -t web-app .
-                           '''
+                        
+                         sh "echo ${env.JOB_BASE_NAME} "
+                         sh "cd /var/lib/jenkins/workspace/${env.JOB_BASE_NAME}/pipeline"
+                         sh "docker build -t web-app ."
                              }
     }
     stage ('Deliver '){
