--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -55,7 +55,9 @@ node(POD_LABEL) {
            container('docker'){
                         
                          sh "echo ${env.JOB_BASE_NAME} "
-                         sh "cd /var/lib/jenkins/workspace/${env.JOB_BASE_NAME}/pipeline"
+                         sh "cd /var/lib/jenkins/workspace
+                         sh "cd ${env.JOB_BASE_NAME}"
+                         sh "cd pipeline"
                          sh "docker build -t web-app ."
                              }
     }
