--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -54,10 +54,7 @@ node(POD_LABEL) {
     stage('Docker build ') {                        
            container('docker'){
                         
-                         sh "echo ${env.JOB_BASE_NAME} "
-                         sh "cd /home/jenkins/agent/workspace"
-                         sh "cd ${env.JOB_BASE_NAME}"
-                         sh "cd pipeline"
+                         sh "cd /home/jenkins/agent/workspace/${env.JOB_BASE_NAME}"
                          sh "docker build -t web-app ."
                              }
     }
