--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -56,22 +56,11 @@ node(POD_LABEL) {
                         
                          sh "cd /home/jenkins/agent/workspace/${env.JOB_BASE_NAME}"
                          sh "docker build -t web-app ."
+                         sh "docker login -u younesic -p Dh123581321*"
+                         sh "docker push younesic/web-app"
                              }
     }
-    stage ('Deliver '){
-           container('node'){
-                        sh '''
-                         ./jenkins/scripts/deliver.sh
-                           '''
-                           
-                         input message: 'Finished using the web site? (Click "Proceed" to continue)'
 
-                         sh '''
-                         ./jenkins/scripts/kill.sh
-                           '''
-                             }
-
-}
 
 }
 
