--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -22,6 +22,9 @@ podTemplate(containers: [
   persistentVolumeClaim(
       mountPath: '/home/jenkins/agent', 
       claimName: 'maven-workspace'      ),
+    persistentVolumeClaim(
+      mountPath: '/var/lib/docker', 
+      claimName: 'docker-cache'      ),
   persistentVolumeClaim(
       mountPath: '/root/.npm', 
       claimName: 'node-npm'      )
@@ -52,12 +55,25 @@ node(POD_LABEL) {
     }
 
     stage('Docker build ') {                        
-           container('docker'){
+            stage ('Deliver '){
+           container('node'){
+                        sh '''
+                         ./jenkins/scripts/deliver.sh
+                           '''
+                           
+                         input message: 'Finished using the web site? (Click "Proceed" to continue)'
+
+                         sh '''
+                         ./jenkins/scripts/kill.sh
+                           '''
+                             }
+
+}   container('docker'){
                         
                          sh "cd /home/jenkins/agent/workspace/${env.JOB_BASE_NAME}"
                          sh "docker build -t web-app ."
                          sh "docker login -u younesic -p Dh123581321*"
-                         sh "docker push younesic/web-app"
+                         sh "docker push web-app"
                              }
     }
 
