--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -25,8 +25,8 @@ podTemplate(containers: [
       mountPath: '/root/.npm', 
       claimName: 'node-npm'      ),
     persistentVolumeClaim(
-      mountPath: '/var/lib/containers:z', 
-      claimName: 'node-npm'      )
+      mountPath: '/var/lib/containers', 
+      claimName: 'buildah-volume'      )
   ]
   
   ) {
