build image using buildah

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -55,9 +55,9 @@ node(POD_LABEL) {
 
        stage('Buildah ') {                        
            container('buildah'){
-                        sh '''
-                            buildah     
-                           '''
+                         sh "cd /home/jenkins/agent/workspace/${env.JOB_BASE_NAME}"
+                         sh "buildah bud -t web-app"
+
                              }
     }
 
