--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -56,6 +56,7 @@ node(POD_LABEL) {
        stage('Buildah ') {                        
            container('buildah'){
                          sh "cd /home/jenkins/agent/workspace/${env.JOB_BASE_NAME}"
+                         sh "modprobe fuse"
                          sh "buildah bud -t web-app"
 
                              }
