--- a/pod.yaml
+++ b/pod.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Pod
 spec:
   volumes:
-    - name: agent-workspace
+    - name: workspace-volume
       persistentVolumeClaim:
         claimName: agent-workspace
   containers:
@@ -10,7 +10,7 @@ spec:
     image: jenkins/inbound-agent:latest
     volumeMounts:
         - mountPath: "/home/jenkins/agent"
-          name: agent-workspace
+          name: workspace-volume
   - name: node
     image: node:latest
     command:
