--- a/pod.yaml
+++ b/pod.yaml
@@ -8,6 +8,9 @@ spec:
     - name: node-volume
       persistentVolumeClaim:
         claimName: node-npm
+    - name: buildah-vol
+      persistentVolumeClaim:
+        claimName: buildah-volume
   containers:
   - name: jnlp
     image: jenkins/inbound-agent:latest
@@ -25,6 +28,9 @@ spec:
     - 99d
   - name: buildah
     image: quay.io/buildah/stable:latest
+    volumeMounts:
+        - mountPath: "/var/lib/containers:Z"
+          name: buildah-vol
     command:
     - sleep
     args:
