--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,4 +1,35 @@
-podTemplate(yaml: readTrusted('pod.yaml')) {
+podTemplate(containers: [
+
+
+
+        containerTemplate(
+        name: 'jnlp', 
+        image: 'jenkins/inbound-agent:latest'
+        ),
+    containerTemplate(
+        name: 'node', 
+        image: 'node:latest', 
+        command: 'sleep', 
+        args: '30d'),
+    containerTemplate(
+        name: 'buildah', 
+        image: 'quay.io/buildah/stable:latest', 
+        command: 'sleep', 
+        args: '30d')
+  ],
+  volumes: [
+  persistentVolumeClaim(
+      mountPath: '/home/jenkins/agent', 
+      claimName: 'agent-workspace'      ),
+  persistentVolumeClaim(
+      mountPath: '/root/.npm', 
+      claimName: 'node-npm'      ),
+    persistentVolumeClaim(
+      mountPath: '/var/lib/containers:z', 
+      claimName: 'node-npm'      )
+  ]
+  
+  ) {
 node(POD_LABEL) {
     environment {
             CI = 'true'
@@ -22,13 +53,13 @@ node(POD_LABEL) {
                              }
     }
 
- //      stage('Buildah ') {                        
- //          container('buildah'){
- //                        sh "cd /home/jenkins/agent/workspace/${env.JOB_BASE_NAME}"
- //                        sh "buildah bud -t web-app"
-
- //                            }
- //   }
+       stage('Buildah ') {                        
+           container('buildah'){
+                        sh '''
+                            buildah     
+                           '''
+                             }
+    }
 
 
 }
