--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -63,7 +63,7 @@ podTemplate(yaml: readTrusted('pod.yaml')) {
  stage('Buildah ') {                        
            container('buildah'){
                             sh "cd /home/jenkins/agent/workspace/${env.JOB_BASE_NAME}"
-                            sh "buildah but -t web-app:latest"
+                            sh "buildah bud -t web-app:latest"
                              }
     }  }
 }
