--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -62,9 +62,10 @@ podTemplate(yaml: readTrusted('pod.yaml')) {
   node(POD_LABEL) {
  stage('Buildah ') {                        
            container('buildah'){
+                            sh "ls /home"
                             sh "cd /home/jenkins/agent/workspace/${env.JOB_BASE_NAME}"
                             sh "ls -la"
-                            sh "buildah bud -t web-app:latest . "
+                            sh "buildah bud -t web-app:latest ."
                              }
     }  }
 }
