--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -68,9 +68,8 @@ podTemplate(yaml: readTrusted('pod.yaml')) {
     }
  stage('Buildah ') {                        
            container('buildah'){
- 
+                            sh "echo $BUILDAH_LAYERS"
                             sh "cd /home/jenkins/agent/workspace/${env.JOB_BASE_NAME}"
-                            sh "ls -la"
                             sh "buildah bud -t web-app:latest ."
                              }
     }  }
