--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -69,7 +69,8 @@ podTemplate(yaml: readTrusted('pod.yaml')) {
  stage('Buildah ') {                        
            container('buildah'){
                             sh "cd /home/jenkins/agent/workspace/${env.JOB_BASE_NAME}"
-                            sh "buildah bud --layers true -t web-app:latest ."
+                            sh "buildah bud --layers true"
+                            sh "buildah bud  -t web-app:latest ."
                              }
     }  }
 }
