--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -69,10 +69,13 @@ podTemplate(yaml: readTrusted('pod.yaml')) {
  stage('Buildah ') {                        
            container('buildah'){
                             sh "cd /home/jenkins/agent/workspace/${env.JOB_BASE_NAME}"
-                            sh "buildah bud --layers ."
                             sh "buildah images -a"
                             sh "buildah bud  -t web-app:latest ."
                             sh "buildah images -a"
+                            sh "buildah bud --layers ."
+                            sh "buildah images -a"
+                            
+
                              }
     }  }
 }
