--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -70,7 +70,7 @@ podTemplate(yaml: readTrusted('pod.yaml')) {
            container('buildah'){
                             sh "cd /home/jenkins/agent/workspace/${env.JOB_BASE_NAME}"
                             sh "buildah images -a"
-                            sh "buildah rmi -a"
+                            sh "buildah rmi -f -a"
                             //sh "buildah bud  -t web-app:latest ."
                             sh "buildah images -a"
                             sh "buildah bud --layers ."
