--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -73,6 +73,7 @@ podTemplate(yaml: readTrusted('pod.yaml')) {
            container('buildah'){
                             sh "cd /home/jenkins/agent/workspace/${env.JOB_BASE_NAME}"
                             sh "buildah build   -t web-app:latest ."
+                            sh "ls /var/lib/images"
                             
 
                              }
