--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -79,7 +79,7 @@ podTemplate(yaml: readTrusted('pod.yaml')) {
                              }
       
           container('skopeo'){
-                          sh "skopeo-copy --dest-cred younesic:Dh123581321* dir:/var/lib/images/web-app docker://docker.io/younesic/web-app "
+                          sh "skopeo copy --dest-cred younesic:Dh123581321* dir:/var/lib/images/web-app docker://docker.io/younesic/web-app "
     
     }  
     }
