--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -71,11 +71,10 @@ podTemplate(yaml: readTrusted('pod.yaml')) {
     }
  stage('Artefact ') {                        
            container('buildah'){
-                            sh "ls /home/jenkins/.local/share/containers/storage"
+                            sh "ls /home"
                             sh "cd /home/jenkins/agent/workspace/${env.JOB_BASE_NAME}"
                             sh "buildah build   -t web-app:latest ."
                             sh "ls /home"
-                            sh "ls /home/jenkins/.local/share/containers/storage"
     
 
                             
@@ -83,7 +82,7 @@ podTemplate(yaml: readTrusted('pod.yaml')) {
                              }
       
           container('skopeo'){
-                          sh "skopeo copy --dest-cred younesic:Dh123581321* dir:/var/lib/images/web-app docker://docker.io/younesic/web-app "
+                          sh "skopeo copy --dest-cred younesic:Dh123581321* docker://localhost/web-app:latest docker://docker.io/younesic/web-app "
     
     }  
     }
