--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -71,7 +71,7 @@ podTemplate(yaml: readTrusted('pod.yaml')) {
     }
  stage('Artefact ') {                        
            container('buildah'){
-                            sh "ls /home"
+                            sh "ls -la /home/jenkins"
                             sh "cd /home/jenkins/agent/workspace/${env.JOB_BASE_NAME}"
                             sh "buildah build   -t web-app:latest ."
                             sh "ls /home"
