--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -82,7 +82,7 @@ podTemplate(yaml: readTrusted('pod.yaml')) {
                              }
       
           container('skopeo'){
-                          sh "skopeo copy --dest-cred younesic:Dh123581321* docker://localhost/web-app:latest docker://docker.io/younesic/web-app "
+                          sh "skopeo copy --dest-creds younesic:Dh123581321* docker://localhost/web-app:latest docker://docker.io/younesic/web-app "
     
     }  
     }
