--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -71,10 +71,8 @@ podTemplate(yaml: readTrusted('pod.yaml')) {
     }
  stage('Artefact ') {                        
            container('buildah'){
-                            sh "ls -la /home/jenkins"
                             sh "cd /home/jenkins/agent/workspace/${env.JOB_BASE_NAME}"
-                            sh "buildah build   -t web-app:latest ."
-                            sh "ls /home"
+     //                       sh "buildah build   -t web-app:latest ."
     
 
                             
@@ -82,7 +80,7 @@ podTemplate(yaml: readTrusted('pod.yaml')) {
                              }
       
           container('skopeo'){
-                          sh "skopeo copy --dest-creds younesic:Dh123581321* docker://localhost/web-app:latest docker://docker.io/younesic/web-app "
+                          sh "skopeo copy --dest-creds younesic:Dh123581321* containers-storage:localhost/web-app:latest docker://docker.io/younesic/web-app "
     
     }  
     }
